# Timetable-Parser

./: .gitignore  README.md  algorithms.py  course_ids.txt  format.py  id_parser.py  latest.db  latest.sqlite  latest1.sqlite  main.py  modifier.py  page_generator.py  pyproject.toml  reader.py  run.sh  utils.py
.mypy_cache/3.8/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _csv.data.json  _csv.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _thread.data.json  _thread.meta.json  abc.data.json  abc.meta.json  algorithms.data.json  algorithms.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  calendar.data.json  calendar.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  copy.data.json  copy.meta.json  csv.data.json  csv.meta.json  datetime.data.json  datetime.meta.json  enum.data.json  enum.meta.json  format.data.json  format.meta.json  id_parser.data.json  id_parser.meta.json  io.data.json  io.meta.json  (+36 more)
.mypy_cache/3.8/collections/: __init__.data.json  __init__.meta.json  abc.data.json  (+1 more)
core/exporters/: database.py  export.py  latest1.db
core/helpers/: common_utils.py  course_utils.py
core/models/: course.py  db_course.py
core/preprocessors/: timetable.py  validators.py
core/source_files/: latest.xlsx  latest_bak.xlsx  old.xlsx
course_files/md/: .timetable.md  BCS-4A.md  BCS-4C.md  file.md  timetable.md  timetable_mod.md
public/: timetable.md
source_files/: .~lock.latest.xlsx#  mid.xlsx  new.xlsx
(+148 files in other folders)
