[tool.poetry]
name = "fast-timetable"
version = "0.1.0"
description = ""
authors = ["Rafay Ghafoor <rafayghafoor@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
openpyxl = "^3.0.2"
requests = "^2.22.0"
pony = "^0.7.16"
pendulum = "^2.1.2"
pdflatex = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
